--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import 'parsley';
 
 $gray-medium-light: #eaeaea;
+$gray-light: #5B5B5B;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -31,8 +32,8 @@ body {
 }
 
 .main {
-  margin-left: 180px; /* Same as the width of the sidebar */
-  margin-bottom: 30px; /* Same as the width of the sidebar */
+  margin-left: 180px;
+  margin-bottom: 30px;
   padding: 10px 10px;
   width: 84%;
 }
@@ -99,20 +100,19 @@ p {
 }
 
 footer {
-  z-index: 3;
-  width: 86%;
-  margin-left: 180px;
-  padding: 5px 5px 0px 15px;
+  z-index: 9991;
+  width: 100%;
+  padding: 5px 5px 0 15px;
   position: fixed;
   bottom: 0;
-  border-top: 1px solid $gray-medium-light;
   color: $gray-medium-light;
   background-color: #000;
+
   a {
-    color: $gray;
+    color: #BBBBBB;
 
     &:hover {
-      color: $gray-darker;
+      color: #fff;
     }
   }
 
@@ -155,7 +155,7 @@ input {
   @extend .has-error;
 
   .form-control {
-    color: $state-danger-text;
+    color: #f00;
   }
 }
 
@@ -181,7 +181,7 @@ input {
   li {
     overflow: auto;
     padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
+    border-bottom: 1px solid $gray-light;
   }
 }
 
@@ -195,7 +195,7 @@ input {
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: arial
+  font-family: arial, serif
 }
 
 .wrapper {
@@ -203,6 +203,7 @@ input {
 }
 
 .sidebar {
+  text-decoration: none;
   position: fixed;
   width: 180px;
   height: 100%;
@@ -226,14 +227,6 @@ input {
   color: #bdb8d7;
   display: block;
   padding-left: 10px;
-}
-
-.wrapper .sidebar ul li a .fas {
-  width: 25px !important
-}
-
-.wrapper .sidebar ul li a .far {
-  width: 25px !important
 }
 
 .wrapper .sidebar ul li:hover {
