Pundit and Parsley Implementation (#5)
* Integrated Devise gem

* Implemented Devise User Model with additional paramters

* Updated README.md file

* Included bootstrap for User Authentication

* Profile Image upload for User completed

* Profile Image upload for User completed

* Featue model added

* Changed User table admin type from string to boolean

* Change column name max_unit_price to max_unit_limit in Features table

* Added index for Features

* Updated .gitignore file

* Removed bin folder from repository

* Removed .ida folder from repository

* Featured CRUD completed

* Fixed format and indentation

* Added extra line at end of files

* Hide Edit/Destory option for simple user

* Plans Crud implemented

* PlansFeatures many-to-many relation created

* Features added with Plan

* Include Features in Plans association completed

* Subscription migration and Model added

* User Subscribe and UnSubscribe a plan functionality completed

* Transaction inserted on Subscribtion

* Subscriptions views completed

* Subscriptions views completed

* Subscriptions views completed

* Transactions view added

* Montly fee calucluation fixed in Edit Plan

* Fixed Plan MontlyFee calculation issue

* Plan show page added

* Plan show page added

* Usage model created

* Updated usage view

* Add usage functionality

* Usage create/update completed

* Charge subscription functionality for admin

* Transaction blocked moved

* Email user on subscription transaction

* Fee calculated based on features usage

* Update schedular for automatic transactions

* Charge subscription functionality added

* Removed BIN files

* Transaction added on charge

* Moved transaction code in subscription

* Moved Billing_Day to helper method

* Fixed extra lines

* Pasley included and Implemented

* Pundit gem added

* Pundit added for Feature and Plan

* Pundit autorization applied on vie

--- a/app/views/usages/index.html.erb
+++ b/app/views/usages/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Usages') %>
 <h1>Usages</h1>
-<% if current_user.admin? %>
+<% if policy(:usage).new? %>
   <div class='col-md-3'>
     <%= button_to 'Add Usage', new_subscription_usage_path, method: :get, class: 'btn btn-primary' %>
     <br>
@@ -13,7 +13,7 @@
     <th>Feature</th>
     <th>Features Limit</th>
     <th>Features Used</th>
-    <% if current_user.admin? %>
+    <% if policy(:usage).update? %>
       <th>Actions</th>
     <% end %>
   </tr>
